MiniCompiladorWorkflow/tests/valid/test2.wf
tarea inicio { input(x); if (x > 0) { print("Positivo"); } else { print("Negativo"); } } ir_a fin; tarea fin { print("Fin"); }