MiniCompiladorWorkflow/tests/invalid/error8.wf
tarea inicio { print("String sin cerrar); }
